confusing compiler stuff omg

--- a/src/makefile
+++ b/src/makefile
@@ -5,6 +5,10 @@ thing:
 	mpicc test.c helpers/helpers.c -o test
 
 NPROC := 8
+NG := 8
 
 run:
 	mpirun -n $(NPROC) ./demo
+
+plot:
+	python3 plot_thing.py $(NPROC) $(NG)
