memcpy not working idk

--- a/src/fft_demo/makefile
+++ b/src/fft_demo/makefile
@@ -1,7 +1,16 @@
 demo:
-	nvcc -c kernels/*.cu -o kernels.o
+	nvcc -c kernels/timer.cu -o timer.o
+	nvcc -c kernels/a2a_ffts.cu -lineinfo -Xptxas -v -Xcompiler="-fPIC" -arch=sm_53 -shared -o a2a_ffts.o
+	nvcc -c kernels/a2a_to_pencils.cu -lineinfo -Xptxas -v -Xcompiler="-fPIC" -arch=sm_53 -shared -o a2a_to_pencils.o
 	mpicc -c all2all_fft_cu_demo.c -o all2all_fft_cu_demo.o
-	mpicc all2all_fft_cu_demo.o kernels.o -L/usr/local/cuda-10.2/lib64 -lcudart -o main.o
+	mpicc -c initializer/initializer.c -o initializer.o
+	mpicxx all2all_fft_cu_demo.o timer.o a2a_ffts.o a2a_to_pencils.o initializer.o -L/usr/local/cuda-10.2/lib64 -lcudart -o main.o
+
+NPROC := 8
+NG := 8
 
 run:
-	./main.o
+	mpirun -n $(NPROC) ./main.o $(NG)
+
+stitch:
+	python3 stitch.py
