--- a/src/a2afft/makefile
+++ b/src/a2afft/makefile
@@ -11,7 +11,7 @@ roomba:
 	nvcc -c tests/cuda_utils.cu -lineinfo -Xptxas -v -Xcompiler="-fPIC" -arch=sm_53 -shared -o cuda_utils.o
 	mpicxx -c tests/demo.cpp -o demo.o
 
-	mpicxx demo.o cuda_utils.o a2adfft.o a2affts.o a2adistribution.o a2apencils.o a2achangefastaxis.o a2acudacopy.o -L/usr/local/cuda-10.2/lib64 -lcufft -lcudart -o main.o
+	mpicxx demo.o cuda_utils.o a2adfft.o a2affts.o a2adistribution.o a2apencils.o a2achangefastaxis.o a2acudacopy.o -L/usr/local/cuda/lib64 -lcufft -lcudart -o main.o
 
 
 NPROC := 8
@@ -22,3 +22,5 @@ run:
 
 clean:
 	rm *.o
+	rm *.out
+	rm proc*
